improved default font

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,8 +21,8 @@
 <div class="title" matTooltip="about">über belego</div>
 
 <div class="description">
-  BELEGO ist eine kostenlose und mobile Webanwendung für die strukturierte
-  Erstellung von Belege.
+  BELEGO ist eine kostenlose und mobile Webanwendung für die Erstellung von
+  strukturierte Belege.
 </div>
 
 <div class="highlights">
