--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -258,7 +258,7 @@
   <caption>
     AUSSTELLER
   </caption>
-  <mat-form-field>
+  <mat-form-field appearance="fill">
     <input
       matInput
       placeholder="NAME DES AUSSTELLERS"
@@ -266,7 +266,7 @@
       type="text"
     />
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field appearance="fill">
     <input
       matInput
       placeholder="ADRESSE"
@@ -274,7 +274,7 @@
       type="text"
     /><mat-icon matSuffix>place</mat-icon>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field appearance="fill">
     <input
       matInput
       placeholder="TELEFON"
@@ -282,7 +282,7 @@
       type="tel"
     /><mat-icon matSuffix>phone</mat-icon>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field appearance="fill">
     <input
       matInput
       placeholder="E-MAIL"
